changed header bg color into green

--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ body {
 }
 
 header {
-    background-color: #002fa8;
+    background-color: #3a9700;
     color: #ffffff;
     padding: 1rem 2rem;
     width: 100%;
